updating measurement write to influx for multiple values
